[project]
name = "microeconomics-videos"
version = "0.1.0"
description = "Replication materials for 'The Effect of Supplementary Videos on University Educational Outcomes'"
requires-python = ">=3.9"
dependencies = [
    "jupyter-http-over-ws",
    "jupyterlab",
    "matplotlib",
    "nodeenv",
    "notebook",
    "numpy",
    "pandas",
    "scipy",
    "stata-kernel",
    "nbautoexport",
    "setuptools<81",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = ["ruff"]

[tool.ruff]
target-version = "py39"
line-length = 99
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length (handled by formatter)
    "SIM108", # ternary operator (can hurt readability in data code)
]

[tool.ruff.lint.isort]
known-first-party = ["modules"]
